Fix fav-delete icon spacing

--- a/src/components/landing-page/deal-name.css
+++ b/src/components/landing-page/deal-name.css
@@ -3,15 +3,20 @@
     width: 160px;
   }
 
+  .fav-delete {
+    height: 20px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+  }
+
   .favorite {
     height: 20px;
     width: 20px;
     cursor: pointer;
-    float: left;
   }
 
   .removeDealButton {
-    float: right;
     height: 20px;
     width: 20px;
     cursor: pointer;
